# Apes-Invasion

./: .clang-format  .gitignore  .gitmodules  0_Bullet3Demo.txt  CMakeLists.txt  FindBullet.cmake  Graphics phase 3 olive.md  Makefile  README.md  cmake_install.cmake  compare.bash  game-doc.md  imgui.ini  killCMakeFiles.bat  killCaches.ps1  run-all.sh  start.ps1
assets/: light_common.glsl
assets/shaders/: CubeEdges.frag  CubeEdges.vert  CubeFaces.frag  circle.frag  diamond.frag  fullscreen.vert  light.frag  light.vert  light_array.frag  line.frag  physics-debug.frag  physics-debug.vert  reticle.frag  reticle.vert  simple.vert  square.frag  textured.frag
assets/shaders/postprocess/: chromatic-aberration.frag  radial-blur.frag  vignette.frag
config/: app.jsonc  fly_cam.json  light-test.jsonc  physics.jsonc  red-screen.json  start.json  start.jsonc
learn-opengl/: .clang-format  .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake
learn-opengl/src/: Camera.cpp  Camera.h  Input.cpp  Input.h  Renderer.h  Texture.h
proposal/: proposal.md
proposal/submission/: Team10.txt
source/: main.cpp
source/common/: Utils.h  application.cpp  application.hpp  asset-loader.cpp  asset-loader.hpp  util.cpp  util.h
source/common/components/: camera.cpp  camera.hpp  component-deserializer.hpp  health.cpp  health.hpp  light.cpp  light.hpp  mesh-renderer.hpp  pick-up.hpp  player-controller.hpp  player-shooter.hpp  projectile.hpp  rigidbody.cpp  rigidbody.hpp  rotating-turret.hpp  targeting-enemy.hpp
source/common/ecs/: IImGuiDrawable.h  component.hpp  entity.cpp  entity.hpp  (+7 more)
source/states/: clear_color_state.hpp  entity-test-state.hpp  fly_cam.hpp  fullscreen_triangle_state.hpp  main-menu.hpp  physics-test.cpp  physics-test.hpp  play-state.hpp
(+37 files in other folders)
